# advent-of-code-2024

./: pyproject.toml
day01/: main.py
